# nfqueue-degrader

./: Cargo.toml  LICENSE  Readme.md
examples/: 10-30ms_delay_5%_loss.csv  100-150ms_delay_30%_loss.csv
src/: config.rs  degrader_model.rs  degrader_model_random.rs  logging.rs  main.rs  nfqueue_degrader.rs  nfqueue_wrapper.rs  packet_queue.rs  protocol.rs
src/queuing_model/: bandwidth_queuing_model.rs  mod.rs  packet_queue.rs  pattern_file_queuing_model.rs  queuing_model_chain.rs  random_queuing_model.rs
test/: config.rs  main.rs  packet.rs  stats_aggregator.rs  stats_collector.rs  udp_client.rs  udp_server.rs
